
Version 0.4.5   - 28 April 2002
  * Fixed a bug where if you used the '--delete' option to completely clean
    an mbox mailbox you would get a python error.
  * Added a lot more testing to test_archivemail.py (test_archivemail.py is
    now 37% bigger than archivemail -- scary)

Version 0.4.4   - 27 April 2002
  * Fixed a bug where the long --suffix option was not working (although the 
    short option, '-s' was).
  * Added time-based format directives to the --suffix option, so that you 
    can do things like specify --suffix='%B%Y' to create archives named
    after the current month and year
  * Added some more tests to test_archivemail.py

Version 0.4.3   - 26 April 2002
  * Fixed a couple of bugs where I was using python version 2.2 syntax that
    was giving errors in python v2.0 and v2.1. 
  * Changed the python requirements for the test script from python version
    2.0 to version 2.1. This is because the unittest module is only available
    in version 2.1 and above.

Version 0.4.2   - 24 April 2002
  * Added the ability to archive messages older than a given absolute date 
    with the new option '--date'.
  * Fixed a bug where archivemail would complain about messages older than 
    1970. Yes, someone had a 'Date' header with 1967 :)
  * Complain if the mailbox to be read does not look like a valid mbox-format
    mailbox.
  * Added a few more tests to test_archivemail.py

Version 0.4.1   - 21 April 2002
  * Don't archive messages that are flagged important unless we are given the
    --include-flagged option. 
  * Fixed a bug where when archiving messages from maildir mailboxes, we were
    not preserving the status information contained in the filename suffix to
    Status and X-Status mbox headers. This means we forgot if we had read or 
    replied to the message.
  * We now complain if an mbox-format mailbox that is being read changes in 
    size -- this should not happen, since we have locked these files, but it
    is a good sanity check.