@@ -1,16 +1,14 @@
 
-Goals for next minor release (0.4.5):
+Goals for next minor release (0.4.6):
 -------------------------------------
 * Think about the best way to specify the names of archives created with
   possibly an --archive-name option.
-* Add a lot more tests (see top of test_archivemail.py)
+* Add more tests (see top of test_archivemail.py)
 * We need some better checking to see if we are really looking at a valid
   mbox-format mailbox.
 
 Goals for next major release (0.5.0):
 -------------------------------------
-* Add a --size option to only archive messages greater than a certain byte
-  size.
 * Lock any original .gz files 
   - is this necessary?
 * Check for symlink attacks for tempfiles (although we don't use /var/tmp)
