@@ -4,6 +4,8 @@ Version 0.4.5   - 28 April 2002
     an mbox mailbox you would get a python error.
   * Added a lot more testing to test_archivemail.py (test_archivemail.py is
     now 37% bigger than archivemail -- scary)
+  * Added a new '--size' option which allows you to only archive messages 
+    over a certain size.
 
 Version 0.4.4   - 27 April 2002
   * Fixed a bug where the long --suffix option was not working (although the 
